@@ -1,11 +1,13 @@
 ChangeLog of simuPOP
 
 version 0.9.2 - Not released, available at https://simupop.svn.sourceforge.net/svnroot/simupop/trunk
-  - CHG: Allow populations in a simulator to have different genotype structure. 
+  - NEW: Allow populations in a simulator to have different genotype structure. 
   - CHG: A simulator can no longer access genotypic structure information.
   - NEW: Add simulator::add to add new populations to a simulator.
   - CHG: Remove simulator::addInfoField and other functions because they can be
 		applied to individual populations.
+  - NEW: Allow the use of single form parameter in population::removeSubPops,
+		population::removeIndividuals.
 
 version 0.9.1 - (Rev 2330) Jan 13, 2009
   - NEW: Improve allele iterator so that stat(alleleFreq) can handle chromosome x and y.
